# tscribe

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release.yml
src/: audio.rs  cache.rs  cli.rs  config.rs  deps.rs  download.rs  error.rs  lib.rs  logging.rs  main.rs  model.rs  pipeline.rs  progress.rs  schema.rs  transcribe.rs  transcript.rs
src/format/: json.rs  markdown.rs  mod.rs  srt.rs  txt.rs  vtt.rs
tests/: cli.rs  e2e.rs  model_download.rs
tests/fixtures/: README.md  expected.md  expected.srt  expected.txt  expected.vtt  expected_timestamps.md  transcript.json
